Change font to Nunito

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,7 +4,7 @@
     --top-margin: 48px;
     --corner-radius: 3px;
 
-    --font-base: "Inter", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    --font-base: "Nunito", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 @import "utils/reset.scss";
