--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -6,14 +6,61 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
 
     video {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      opacity: 0.15;
+      filter: blur(15px);
+      scale: 115%;
     }
   }
 
   &--contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: calc(100vh - 48px);
+    gap: 20px;
+
+    &-hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 32px;
+      min-height: calc(100vh - 48px);
+      width: calc(100% - 24px);
+      max-width: var(--max-width);
+
+      &-title {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &-welcome {
+          font-weight: 200;
+          font-size: 48px;
+          line-height: 65px;
+        }
+
+        &-name {
+          font-weight: 600;
+          font-size: 64px;
+          line-height: 87px;
+        }
+      }
+
+      &-description {
+        color: var(--hsl-light60);
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 40px;
+        text-align: center;
+      }
+    }
   }
 }
