Add landing page

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,6 +4,8 @@
     --top-margin: 48px;
     --corner-radius: 3px;
 
+    --accent-shadow: 0 0 6px hsla(var(--base-hue), 100%, 50%, 0.02), 0 2px 4px hsla(var(--base-hue), 100%, 50%, 0.08);
+
     --font-base: "Nunito", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
