--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,8 +2,12 @@ html, body {
     font-family: var(--font-base);
     background: var(--hsl-bg);
     color: var(--hsl-light90);
+    min-height: 100vh;
 }
 
+#root {
+    min-height: 100vh;
+}
 
 *, :after, :before {
     box-sizing: border-box;
