--- a/src/styles/pages/home/staffs.scss
+++ b/src/styles/pages/home/staffs.scss
@@ -66,7 +66,6 @@
 
       .inline_account {
         width: 100%;
-        justify-content: flex-start;
         padding: 8px;
         height: calc(32px + 16px);
         border-radius: var(--corner-radius);
@@ -74,6 +73,10 @@
 
         &:hover {
           background: var(--hsl-dark15);
+
+          .inline_account--badge {
+            color: var(--hsl-light60);
+          }
         }
       }
     }
