--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -47,10 +47,11 @@
           padding: 8px;
           border-radius: var(--corner-radius);
           color: var(--hsl-dark40);
-          transition: background-color 0.25s;
+          transition: background-color 0.25s, color 0.25s;
 
           &:hover {
             background: var(--hsl-dark15);
+            color: var(--hsl-light60);
           }
 
           &-active {
@@ -61,6 +62,7 @@
 
             &:hover {
               background: var(--hsl-accent);
+              color: var(--hsl-light90);
             }
           }
         }
@@ -87,9 +89,11 @@
           padding: 8px;
           border-radius: var(--corner-radius);
           color: var(--hsl-dark40);
+          transition: background-color 0.25s, color 0.25s;
 
           &:hover {
             background: var(--hsl-dark15);
+            color: var(--hsl-light60);
           }
         }
       }
